--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
-            <h1 class="img-circle"><img src="img/profile.png" width="150px" height="150px"></h1>
+            <h1 class="img-circle"><img src="img/profile.png" width="150px" height="150px"></h1><br>
             <h1>Kaizad Avari</h1>
             <h3>Software is a great combination of artistry and engineering.<br>-Bill Gates
             </h3>
