--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
     <!-- Header -->
     <header id="top" class="header">
         <div class="text-vertical-center">
+            <h1> </h1>
             <h1 class="img-circle"><img src="img/profile.png" width="150px" height="150px"></h1><br>
             <h1>Kaizad Avari</h1>
             <h3>Software is a great combination of artistry and engineering.<br>-Bill Gates
@@ -75,8 +76,13 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2>Stylish Portfolio is the perfect theme for your next project!</h2>
-                    <p class="lead">This theme features some wonderful photography courtesy of <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a>.</p>
+                    
+                    <!-- <h2>Education</h2> <!-- Do this? -->
+                    <!-- <hr class="small-dark"> <!-- Patani help plz lel -->
+                    
+                    <h2>Hello</h2>
+                    <p class="lead">I'm a young Computer Science professional studying at the University of Florida.<br>
+                    I focus on software development with an overarching focus on user experience. Feedback drives development.</p>
                 </div>
             </div>
             <!-- /.row -->
@@ -93,11 +99,11 @@
                     <h2>Platforms</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-2 col-sm-4"> <!-- Changed this, ask Patani -->
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-cloud fa-stack-1x text-primary"></i>
+                                <i class="fa fa-android fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Android</strong>
@@ -106,11 +112,11 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-2 col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-compass fa-stack-1x text-primary"></i>
+                                <i class="fa fa-mobile fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>iOS</strong>
@@ -119,11 +125,11 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-2 col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-flask fa-stack-1x text-primary"></i>
+                                <i class="fa fa-windows fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Windows</strong>
@@ -132,11 +138,11 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-2 col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-internet-explorer fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Web</strong>
@@ -145,7 +151,20 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-3 col-sm-6">
+                        <div class="col-md-2 col-sm-4">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Unity 3D</strong>
+                                </h4>
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a> -->
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-4">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -213,7 +232,6 @@
                         </div>
                     </div>
                     <!-- /.row (nested) -->
-                    <a href="#" class="btn btn-dark">View More Items</a>
                 </div>
                 <!-- /.col-lg-10 -->
             </div>
@@ -228,14 +246,12 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h3>The buttons below are impossible to resist.</h3>
-                    <a href="#" class="btn btn-lg btn-light">Click Me!</a>
-                    <a href="#" class="btn btn-lg btn-dark">Look at Me!</a>
                 </div>
             </div>
         </div>
     </aside>
 
-    <!-- Map -->
+    <!-- Map 
     <section id="contact" class="map">
         <iframe width="100%" height="100%" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;aq=0&amp;oq=twitter&amp;sll=28.659344,-81.187888&amp;sspn=0.128789,0.264187&amp;ie=UTF8&amp;hq=Twitter,+Inc.,+Market+Street,+San+Francisco,+CA&amp;t=m&amp;z=15&amp;iwloc=A&amp;output=embed"></iframe>
         <br />
@@ -244,7 +260,7 @@
         </small>
         </iframe>
     </section>
-
+-->
     <!-- Footer -->
     <footer>
         <div class="container">
