--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <link href="css/stylish-portfolio.css" rel="stylesheet">
 
     <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+    <link href="https://opensource.keycdn.com/fontawesome/4.6.3/font-awesome.min.css" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
@@ -71,7 +71,6 @@
         </div>
     </header>
 
-    <!-- About -->
     <section id="about" class="about">
         <div class="container">
             <div class="row">
@@ -90,6 +89,40 @@
         <!-- /.container -->
     </section>
 
+    <!-- About -->
+    <section id="education" class="gator">
+        <div class="container">
+            <div class="row">
+                <!--<div class="col-lg-12">-->
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img class="center-block img-responsive" src="img/uf.gif" alt="UF" />
+                            </div> 
+                            <div class="col-xs-8">
+                                <h3><b>University of Florida</b></h3>
+                                <p class="lead">August 2015 - May 2017</br>GPA 3.9/4.0</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="row">
+                            <div class="col-xs-4">
+                                <img class="img-responsive" src="img/um.png" alt="UF" />
+                            </div> 
+                            <div class="col-xs-8">
+                                <h3><b>Mumbai University</b></h3>
+                                <p class="lead">August 2011 - May 2015</br>GPA 3.35/4.0</p>
+                            </div>
+                        </div>
+                    </div>
+                <!--</div>-->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
     <!-- Services -->
     <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
     <section id="services" class="services bg-primary">
@@ -99,7 +132,7 @@
                     <h2>Platforms</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-md-2 col-sm-4"> <!-- Changed this, ask Patani -->
+                        <div class="col-md-2 col-sm-4 col-xs-6"> <!-- Changed this, ask Patani -->
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -112,7 +145,7 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-2 col-sm-4">
+                        <div class="col-md-2 col-sm-4 col-xs-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -125,7 +158,7 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-2 col-sm-4">
+                        <div class="col-md-2 col-sm-4 col-xs-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -138,7 +171,7 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-2 col-sm-4">
+                        <div class="col-md-2 col-sm-4 col-xs-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
@@ -151,11 +184,11 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-2 col-sm-4">
+                        <div class="col-md-2 col-sm-4 col-xs-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-gamepad fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Unity 3D</strong>
@@ -164,14 +197,14 @@
                                 <a href="#" class="btn btn-light">Learn More</a> -->
                             </div>
                         </div>
-                        <div class="col-md-2 col-sm-4">
+                        <div class="col-md-2 col-sm-4 col-xs-6">
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-shield fa-stack-1x text-primary"></i>
+                                <i class="fa fa-code fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
-                                    <strong>Unity 3D</strong>
+                                    <strong>Arduino</strong>
                                 </h4>
                                 <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
                                 <a href="#" class="btn btn-light">Learn More</a> -->
