--- a/index.html
+++ b/index.html
@@ -93,7 +93,6 @@
     <section id="education" class="gator">
         <div class="container">
             <div class="row">
-                <!--<div class="col-lg-12">-->
                     <div class="col-md-6">
                         <div class="row">
                             <div class="col-xs-4">
@@ -130,6 +129,105 @@
             <div class="row text-center">
                 <div class="col-lg-10 col-lg-offset-1">
                     <h2>Platforms</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-md-2 col-sm-4 col-xs-6"> <!-- Changed this, ask Patani -->
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-android fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Android</strong>
+                                </h4>
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a> -->
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-4 col-xs-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-mobile fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>iOS</strong>
+                                </h4>
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a> -->
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-4 col-xs-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-windows fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Windows</strong>
+                                </h4>
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a> -->
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-4 col-xs-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-internet-explorer fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Web</strong>
+                                </h4>
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a> -->
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-4 col-xs-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-gamepad fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Unity 3D</strong>
+                                </h4>
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a> -->
+                            </div>
+                        </div>
+                        <div class="col-md-2 col-sm-4 col-xs-6">
+                            <div class="service-item">
+                                <span class="fa-stack fa-4x">
+                                <i class="fa fa-circle fa-stack-2x"></i>
+                                <i class="fa fa-code fa-stack-1x text-primary"></i>
+                            </span>
+                                <h4>
+                                    <strong>Arduino</strong>
+                                </h4>
+                                <!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
+                                <a href="#" class="btn btn-light">Learn More</a> -->
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row (nested) -->
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+                <!-- Languages -->
+
+    <!-- Services -->
+    <!-- The circle icons use Font Awesome's stacked icon classes. For more information, visit http://fontawesome.io/examples/ -->
+    <section id="services" class="languages bg-primary">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col-lg-10 col-lg-offset-1">
+                    <h2>Languages</h2>
                     <hr class="small">
                     <div class="row">
                         <div class="col-md-2 col-sm-4 col-xs-6"> <!-- Changed this, ask Patani -->
@@ -263,6 +361,60 @@
                                 </a>
                             </div>
                         </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                </a>
+                            </div>
+                        </div>
+                        <div class="col-md-6">
+                            <div class="portfolio-item">
+                                <a href="#">
+                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <!-- /.row (nested) -->
+                </div>
+                <!-- /.col-lg-10 -->
+            </div>
+            <!-- /.row -->
+        </div>
+        <!-- /.container -->
+    </section>
+
+    <!-- Work Experience -->
+    <section id="workex" class="workex bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-10 col-lg-offset-1 text-center">
+                    <h2>Work Experience</h2>
+                    <hr class="small">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <img class="center-block img-responsive" src="img/uf.gif" alt="UF" />
+                                </div> 
+                                <div class="col-xs-8">
+                                    <h3><b>Center for Safety, Simulation & Advanced Learning Technologies</b></h3>
+                                    <p class="lead">August 2015 - May 2017</br>GPA 3.9/4.0</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-12">
+                            <div class="row">
+                                <div class="col-xs-4">
+                                    <img class="center-block img-responsive" src="img/uf.gif" alt="UF" />
+                                </div> 
+                                <div class="col-xs-8">
+                                    <h3><b>University of Florida</b></h3>
+                                    <p class="lead">August 2015 - May 2017</br>GPA 3.9/4.0</p>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                     <!-- /.row (nested) -->
                 </div>
@@ -274,7 +426,7 @@
     </section>
 
     <!-- Call to Action -->
-    <aside class="call-to-action bg-primary">
+    <!--<aside class="workex bg-primary">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -282,7 +434,7 @@
                 </div>
             </div>
         </div>
-    </aside>
+    </aside>-->
 
     <!-- Map 
     <section id="contact" class="map">
