--- a/index.html
+++ b/index.html
@@ -413,43 +413,43 @@
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                <a href="https://play.google.com/store/apps/details?id=com.webawas.bawaportal" target="_blank">
+                                    <img class="img-portfolio img-responsive" alt="Parsi Portal" src="img/work1.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                <a href="https://play.google.com/store/apps/details?id=com.neowin.newsfeed" target="_blank">
+                                    <img class="img-portfolio img-responsive" alt="Neowin Reader" src="img/work2.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-3.jpg">
+                                <a href="https://play.google.com/store/apps/details?id=com.kaizad.sanskritappflipper" target="_blank">
+                                    <img class="img-portfolio img-responsive" alt="Learn Sanskrit" src="img/work3.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-4.jpg">
+                                <a href="#portfolio">
+                                    <img class="img-portfolio img-responsive" alt="Smart Helmet" src="img/work4.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-1.jpg">
+                                <a href="https://play.google.com/store/apps/details?id=com.kaizad.mumbai.taxi.meter" target="_blank">
+                                    <img class="img-portfolio img-responsive" alt="Mumbai Meter" src="img/work5.png">
                                 </a>
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="portfolio-item">
-                                <a href="#">
-                                    <img class="img-portfolio img-responsive" src="img/portfolio-2.jpg">
+                                <a href="https://play.google.com/store/apps/details?id=com.csi.kjsce" target="_blank">
+                                    <img class="img-portfolio img-responsive" alt="CSI KJSCE" src="img/work6.png">
                                 </a>
                             </div>
                         </div>
