REsume added! Yaay!

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-md-6">
                         <div class="row">
                             <div class="col-xs-4">
-                                <img class="center-block img-responsive" src="img/uf.gif" alt="UF" />
+                                <img class="center-block img-responsive img-vertical-center" src="img/uf.gif" alt="UF" />
                             </div> 
                             <div class="col-xs-8">
                                 <h3><b>University of Florida</b></h3>
@@ -462,6 +462,22 @@
         </div>
         <!-- /.container -->
     </section>
+
+
+    <!-- Resume -->
+    <section id="Resume" class="resume">
+        <div class="container">
+            <div class="row">
+                    <div class="col-xs-12">
+                        <h2>Oh, you might want this one...</h2>
+                    </div>
+                    <div class="col-sm-12">
+                        <a href="files/Kaizad Avari - Resume.pdf" class="btn btn-light-padded" target="_blank">Resume</a>
+                    </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Work Experience -->
     <section id="workex" class="workex bg-primary">
