--- a/index.html
+++ b/index.html
@@ -93,24 +93,24 @@
     <section id="education" class="gator">
         <div class="container">
             <div class="row">
-                    <div class="col-md-6">
+                    <div class="col-md-5 col-md-offset-1 col-sm-6 media">
                         <div class="row">
-                            <div class="col-xs-4">
-                                <img class="center-block img-responsive img-vertical-center" src="img/uf.gif" alt="UF" />
+                            <div class="media-left">
+                                <img class="media-object" style="height: 100px" src="img/UF.png" alt="UF" />
                             </div> 
-                            <div class="col-xs-8">
-                                <h3><b>University of Florida</b></h3>
+                            <div class="media-body">
+                                <h3 class="media-heading"><b>University of Florida</b></h3>
                                 <p class="lead">August 2015 - May 2017</br>GPA 3.9/4.0</p>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-6">
                         <div class="row">
-                            <div class="col-xs-4">
-                                <img class="img-responsive" src="img/um.png" alt="UF" />
+                            <div class="media-left">
+                                <img class="media-object" style="height: 100px" src="img/um.png" alt="UF" />
                             </div> 
-                            <div class="col-xs-8">
-                                <h3><b>Mumbai University</b></h3>
+                            <div class="media-body">
+                                <h3 class="media-heading"><b>Mumbai University</b></h3>
                                 <p class="lead">August 2011 - May 2015</br>GPA 3.35/4.0</p>
                             </div>
                         </div>
