no uf whitespace

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                     <div class="col-md-5 col-md-offset-1 col-sm-6 media">
                         <div class="row">
                             <div class="media-left">
-                                <img class="media-object" style="height: 100px" src="img/UF.png" alt="UF" />
+                                <img class="media-object" style="height: 100px" src="img/uf.png" alt="UF" />
                             </div> 
                             <div class="media-body">
                                 <h3 class="media-heading"><b>University of Florida</b></h3>
