Done! (Well almost)

--- a/index.html
+++ b/index.html
@@ -47,10 +47,16 @@
                 <a href="#about" onclick=$("#menu-close").click();>About</a>
             </li>
             <li>
-                <a href="#services" onclick=$("#menu-close").click();>Services</a>
+                <a href="#education" onclick=$("#menu-close").click();>Education</a>
             </li>
             <li>
-                <a href="#portfolio" onclick=$("#menu-close").click();>Portfolio</a>
+                <a href="#services" onclick=$("#menu-close").click();>Technologies</a>
+            </li>
+            <li>
+                <a href="#portfolio" onclick=$("#menu-close").click();>Projects</a>
+            </li>
+            <li>
+                <a href="#workex" onclick=$("#menu-close").click();>Work Experience</a>
             </li>
             <li>
                 <a href="#contact" onclick=$("#menu-close").click();>Contact</a>
@@ -487,25 +493,25 @@
                     <h2>Work Experience</h2>
                     <hr class="small">
                     <div class="row">
-                        <div class="col-sm-12">
+                        <div class="col-sm-12 media">
                             <div class="row">
-                                <div class="col-xs-4">
-                                    <img class="service-item img-responsive" src="img/cssalt.png" alt="UF" />
+                                <div class="media-left">
+                                    <img class="media-object" style="width: 150px" src="img/cssalt.png" alt="UF" />
                                 </div> 
-                                <div class="col-xs-8">
-                                    <h3><b>Center for Safety, Simulation & Advanced Learning Technologies</b></h3>
-                                    <p class="lead">Simulation Developer</br>January 2016 - Present</p>
+                                <div class="media-body">
+                                    <h3 class="media-heading workex-text"><b>Center for Safety, Simulation & Advanced Learning Technologies</b></h3>
+                                    <p class="lead workex-text">Simulation Developer</br>January 2016 - Present</p>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-12">
+                        <div class="col-md-12 media">
                             <div class="row">
-                                <div class="col-xs-4">
+                                <div class="media-left">
                                     <img height="150px" width="150px" src="img/pp.png" alt="UF" />
                                 </div> 
-                                <div class="col-xs-8">
-                                    <h3><b>Parsi Portal</b></h3>
-                                    <p class="lead">Founder</br>July 2015 - Present</p>
+                                <div class="media-body">
+                                    <h3 class="media-heading workex-text"><b>Parsi Portal</b></h3>
+                                    <p class="lead workex-text">Founder</br>July 2015 - Present</p>
                                 </div>
                             </div>
                         </div>
