Final ho gaya baa!

--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
                 <a href="#portfolio" onclick=$("#menu-close").click();>Projects</a>
             </li>
             <li>
+                <a href="#resume" onclick=$("#menu-close").click();>Resume</a>
+            </li>
+            <li>
                 <a href="#workex" onclick=$("#menu-close").click();>Work Experience</a>
             </li>
             <li>
@@ -471,7 +474,7 @@
 
 
     <!-- Resume -->
-    <section id="Resume" class="resume">
+    <section id="resume" class="resume">
         <div class="container">
             <div class="row">
                     <div class="col-xs-12">
