University correction, Project section update

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             </div> 
                             <div class="media-body">
                                 <h3 class="media-heading"><b>University of Florida</b></h3>
-                                <p class="lead">August 2015 - May 2017</br>GPA 3.9/4.0</p>
+                                <p class="lead">Computer Science (Masters)</br>August 2015 - May 2017</br>GPA 3.9/4.0</p>
                             </div>
                         </div>
                     </div>
@@ -119,8 +119,8 @@
                                 <img class="media-object" style="height: 100px" src="img/um.png" alt="UF" />
                             </div> 
                             <div class="media-body">
-                                <h3 class="media-heading"><b>Mumbai University</b></h3>
-                                <p class="lead">August 2011 - May 2015</br>GPA 3.35/4.0</p>
+                                <h3 class="media-heading"><b>University of Mumbai</b></h3>
+                                <p class="lead">Information Technology (Bachelors)</br>August 2011 - May 2015</br>GPA 3.5/4.0</p>
                             </div>
                         </div>
                     </div>
@@ -419,6 +419,7 @@
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h2>Projects</h2>
                     <hr class="small">
+                    <p class="lead">(Click for redirect)</p>
                     <div class="row">
                         <div class="col-md-6">
                             <div class="portfolio-item">
