--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-internet-explorer fa-stack-1x text-primary"></i>
+                                <i class="fa fa-edge fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Web</strong>
@@ -209,7 +209,7 @@
                             <div class="service-item">
                                 <span class="fa-stack fa-4x">
                                 <i class="fa fa-circle fa-stack-2x"></i>
-                                <i class="fa fa-code fa-stack-1x text-primary"></i>
+                                <i class="fa fa-braille fa-stack-1x text-primary"></i>
                             </span>
                                 <h4>
                                     <strong>Arduino</strong>
