📸 Added website favicon!

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 
     <title>Kaizad Avari - Home</title>
 
+    <link rel="icon" href="img/favicon.png">
+
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
 
