Revert "Added descriptions and fixed menu ID"
This reverts commit 2b5dd8e8e12fccafe2ceaf83bc884b832bf11d8f.

--- a/index.html
+++ b/index.html
@@ -507,8 +507,6 @@
                                 <div class="media-body">
                                     <h3 class="media-heading workex-text"><b>Center for Safety, Simulation & Advanced Learning Technologies</b></h3>
                                     <p class="lead workex-text">Simulation Developer</br>January 2016 - Present</p>
-                                    <p class="lead workex-text">Actively involved in developing CSSALT's Mixed Rality Simulation Suite, building few of the best features like their Integrated Tutor.
-                                        The CSSALT MR Sim is a groundbreaking way for students to visualize and learn medical procedures, ensuring an unparalleled learning experience.</p>
                                 </div>
                             </div>
                         </div>
@@ -520,8 +518,6 @@
                                 <div class="media-body">
                                     <h3 class="media-heading workex-text"><b>Parsi Portal</b></h3>
                                     <p class="lead workex-text">Founder</br>July 2015 - Present</p>
-                                    <p class="lead workex-text">Parsi portal is a global-scale service that serves the greater Zoroastrian comunity. The service provides a unique platform for
-                                        Zoroastrians to communicate, socialize and stay up to speed with community events, all in one neat and seamless package.</p>
                                 </div>
                             </div>
                         </div>
@@ -558,7 +554,7 @@
 -->
     <!-- Footer -->
     <footer>
-        <div class="container" id="contact">
+        <div class="container">
             <div class="row">
                 <div class="col-lg-10 col-lg-offset-1 text-center">
                     <h4><strong>Hello from the Gator Nation</strong>
